# BlockGame

./: .gitignore  AGENTS.md  CMakeLists.txt  README.md  block_atlas_guide.txt  blockgame.ilk  build_blockgame.bat  debug_output.txt  output.txt
assets/: worldgen.toml
assets/biomes/: beach.toml  coast_cliffs.toml  desert.toml  forest.toml  grasslands.toml  little_mountains.toml  ocean.toml  ocean_shelf.toml
build_vs/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  BlockGame.sln  CMakeCache.txt  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  blockgame.vcxproj  blockgame.vcxproj.filters  cmake_install.cmake
build_vs/blockgame.dir/Release/: blockgame.exe.recipe
build_vs/blockgame.dir/Release/blockgame.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
build_vs/x64/Release/ALL_BUILD/: ALL_BUILD.recipe
build_vs/x64/Release/ALL_BUILD/ALL_BUILD.tlog/: ALL_BUILD.lastbuildstate
build_vs/x64/Release/ZERO_CHECK/: ZERO_CHECK.recipe
build_vs/x64/Release/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog
build_x64/: CMakeCache.txt
include/glad/: glad.h
src/: TextureLoader.cpp  TextureLoader.h  camera.cpp  camera.h  chunk_manager.cpp  chunk_manager.h  glad.c  input_context.cpp  input_context.h  main.cpp  renderer.cpp  renderer.h  text_overlay.cpp  text_overlay.h  text_overlay.inl
src/terrain/: biome_database.cpp  biome_database.h  climate_map.cpp  climate_map.h  surface_map.cpp  surface_map.h  terrain_generator.cpp  terrain_generator.h  worldgen_profile.cpp  worldgen_profile.h
tools/: biome_query.py  find_little_mountains.py  little_mountains_columns.csv  sample_little_mountains.cpp
